# signal-filters

./: .gitignore  app.py  filters.py  pyproject.toml  requirements.txt
data/: RAW_ACCELEROMETERS.csv
