[project]
name = "signal-filters-demo"
version = "0.1.0"
description = "Interactive demo to visualize and compare signal filtering methods"
requires-python = ">=3.11"
dependencies = [
  "streamlit==1.41.1",
  "pandas==2.2.3",
  "numpy==2.1.3",
  "plotly==5.24.1",
  "scipy==1.14.1",
]

[tool.uv]
dev-dependencies = []
